# tatara

./: .gitattributes  .gitignore  ATTRIBUTION.md  CLAUDE.md  Cargo.toml  LICENSE  README.ja.md  README.md  rust-toolchain.toml
.github/workflows/: checks.yaml
bins/eval_sfen/src/: main.rs
bins/net_from_yo/src/: main.rs
bins/net_to_yo/src/: main.rs
bins/nnue_train/: Cargo.toml  build.rs
bins/nnue_train/src/: arch.rs  ckpt.rs  cli.rs  kernel_module.rs  main.rs  smoke.rs  threat_ablate.rs  trainer_common.rs  trainer_layerstack.rs  trainer_simple.rs  training.rs
bins/nnue_train/src/kernels/: common.rs  layerstack.rs  mod.rs  simple.rs
bins/nnue_train/src/tests/: cli_tests.rs  ft_factorize_tests.rs  gpu_cpu_equivalence_tests.rs  mod.rs  native_cuda_tests.rs  raw_ckpt_format_tests.rs
bins/progress_bucket_survey/: Cargo.toml
bins/progress_bucket_survey/src/: main.rs
bins/progress_kpabs_train/: Cargo.toml
bins/progress_kpabs_train/src/: main.rs
bins/progress_kpabs_train/src/host/: batch.rs  cli.rs  games.rs  mod.rs  progress_bin.rs
bins/progress_kpabs_train/tests/: host_smoke.rs
crates/cuda-native-runtime/: build.rs
crates/cuda-native-runtime/kernels/: native_kernels.cu
crates/cuda-native-runtime/src/: lib.rs  runtime.rs
crates/cuda-native-runtime/tests/: native_smoke.rs
crates/gpu-kernels/: Cargo.toml
crates/gpu-kernels/src/: lib.rs
crates/gpu-kernels/src/layerstack/: abs_pow2_scale.rs  concat_l1sqr_main.rs  crelu.rs  dense_mm.rs  dense_mm_bucket.rs  elementwise.rs  ft_post_perspective.rs  mod.rs  psqt.rs  slice2d.rs
crates/gpu-kernels/src/pointwise/: adamw_step.rs  loss_wdl.rs  loss_wrm.rs  mod.rs  radam_step.rs  ranger_step.rs  screlu_fwd.rs  screlu_grad.rs
crates/gpu-kernels/src/progress/: adam_step.rs  eval.rs  forward.rs  grad.rs  mod.rs
crates/gpu-kernels/src/sparse/: ft_factorize.rs  mod.rs  sparse_ft_backward.rs  sparse_ft_forward.rs
crates/gpu-runtime/: Cargo.toml
crates/gpu-runtime/examples/: vecadd_demo.rs
crates/gpu-runtime/src/: lib.rs  native_backend.rs
crates/nnue-format/: Cargo.toml
crates/nnue-format/src/: arch_kind.rs  halfka_psqt.rs  header.rs  layerstack_weights.rs  lib.rs  simple_weights.rs  v102_layerstack.rs
crates/nnue-train/: Cargo.toml
crates/nnue-train/src/: dataloader.rs  experiment.rs  init.rs  lib.rs  optimizer.rs  schedule.rs  trainer.rs  validation.rs
crates/shogi-features/: Cargo.toml
crates/shogi-features/examples/: dump_e4_indices.rs
crates/shogi-features/src/: feature_set.rs  halfka_e4.rs  halfka_hm.rs  kingrank9.rs  lib.rs  progress_kpabs.rs  psqt_material.rs  threat.rs  threat_exclusion.rs  threat_symmetric.rs
crates/shogi-features/src/simd/: avx2.rs  avx512.rs  mod.rs  scalar.rs  tables.rs
crates/shogi-features/tests/: feature_set.rs  progress_kpabs_smoke.rs
crates/shogi-format/: Cargo.toml
crates/shogi-format/src/: lib.rs  packed_sfen.rs
crates/shogi-format/tests/: psv_smoke.rs
docs/: 00-overview.md  arch-string.md  bullet_v102_save_format_report.md  data-layout.md  held-out-validation.ja.md  held-out-validation.md  native-cuda-benchmark.ja.md  native-cuda-benchmark.md  net-to-yaneuraou.md  performance.md  review-checklist.md  setup.ja.md  setup.md  training-quickstart.ja.md  training-quickstart.md  training-schedule.ja.md  training-schedule.md  wrm-loss-tuning.ja.md  wrm-loss-tuning.md
docs/01-decisions/: 0001-licensing.md  0002-vendor-vs-dep.md  0003-cuda-oxide-adoption.md  0004-fused-kernel-strategy.md  0005-staged-migration-plan.md  0006-rocm-out-of-scope.md
docs/decisions/: 2026-05-09-cuda-oxide-adoption.md  2026-05-09-fused-kernel-strategy.md  2026-05-09-vendor-vs-dep.md  2026-05-17-experiment-json.md  2026-05-19-nnue-feature-set-two-axis-model.md  2026-05-20-simple-quantised-format-engine-consumer.md  2026-05-22-layerstack-dim-configurable.md  2026-05-23-num-buckets-configurable.md  2026-05-31-ckpt-lr-horizon.md  2026-05-31-per-layer-weight-clamp.md  2026-05-31-wrm-loss-extensions.md  2026-06-02-norm-loss.md  2026-06-04-per-param-group-optimizer.md  2026-06-12-ft-factorizer.md  2026-06-18-shared-data-root.md  2026-06-19-threat-feature-set.md  2026-07-09-effect-bucket-feature-set.md  2026-07-09-halfka-e4-feature-set.md  2026-07-18-native-cuda-backend.md
docs/experiments/: 001-stage1-10-numerical-equivalence.md  002-gputrainer-step-profiling.md  v102_perf_followup_20260514.md  v99_layerstack-1536x16x32_dlsuisho15b-aoba-deduped_400sb_progress8kpabs_hao-progress_wrm-in340.md
docs/experiments/progress/: progress_nodchip_continuous_full_20260428.md
docs/kernels/: fused-pattern-catalog.md
experiments/001-cuda-oxide-kpabs/: Cargo.toml  README.md
experiments/001-cuda-oxide-kpabs/src/: lib.rs  main.rs
experiments/001-cuda-oxide-kpabs/src/kernels/: mod.rs
experiments/001-cuda-oxide-kpabs/tests/: adam_step_smoke.rs  eval_smoke.rs  forward_smoke.rs
experiments/002-fused-kernels/: Cargo.toml  README.md
experiments/002-fused-kernels/src/: main.rs
scripts/: bench-pos.env.example  bench-pos.sh  build-kernels.sh  build_for_sm75.sh  check-native-cuda-parity.sh  local-ci.sh  setup-cuda-oxide.sh
