[workspace]
resolver = "2"
members = []

# 各 crate / experiment / bin は Stage 1 以降で順次追加する。
# 追加先候補:
#   crates/shogi-format
#   crates/shogi-features
#   crates/gpu-runtime
#   crates/gpu-kernels
#   crates/nnue-train
#   crates/nnue-format
#   experiments/001-cuda-oxide-kpabs
#   bins/progress_kpabs_train
#   bins/nnue_train
#   bins/nnue_eval

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/SH11235/rshogi-nnue"
authors = ["SH11235"]
rust-version = "1.85"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
