[package]
# bin の package 名は crate `nnue-train` と衝突するため `nnue-trainer` にする。
# binary 実行名 (`[[bin]] name`) は `nnue-train` を維持 (Stage 1 の
# `progress-kpabs-train` と同流儀、`cargo run --bin nnue-train ...` で動かす)。
name = "nnue-trainer"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[[bin]]
name = "nnue-train"
path = "src/main.rs"

[dependencies]
# host 側ロジック (schedule / dataloader / optimizer / trainer loop) は
# `nnue-train` crate に置く。`nnue-format` は save_quantised / load の
# entry point として本 bin から呼ぶ (Stage 3-8 #65 で integrate)。
nnue-train = { workspace = true }
nnue-format = { workspace = true }
shogi-format = { workspace = true }
shogi-features = { workspace = true }
gpu-kernels = { workspace = true }
gpu-runtime = { workspace = true }
clap = { workspace = true }

# cuda-oxide deps: device 側 API (`#[kernel]` / DisjointSlice / atomics) と
# host 側 launch (`cuda_launch!` macro)。Stage 1 / Stage 2 と同 rev (`6de0509`)。
# `cuda-core` は `cuda_launch!` macro 展開で参照されるため explicit dep。
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
