[package]
name = "gpu-runtime"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }

[lints]
workspace = true

# cuda-oxide commit 6de0509 (Stage 0-1 で動作確認済 rev) に pin して取り込む。
# vendor せず git dep のみ (ADR-0003 の依存方針 / ATTRIBUTION.md の cuda-oxide 節参照)。
[dependencies]
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
thiserror = "2"
