[package]
name = "nnue-format"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# NNUE 重みファイル (header / halfka_psqt / layerstack) の (de)serialization
# 専用 crate。CPU-only、GPU 依存なし。
# artifact identity (arch 文字列 / hash) を feature set から導出するため
# shogi-features (CPU-only) に依存する。
shogi-features = { workspace = true }
