[package]
name = "exp-001-cuda-oxide-kpabs"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
shogi-format = { workspace = true }

# cuda-oxide の device 側 API (#[kernel] macro, DisjointSlice, thread::index_*)。
# rev は Stage 0-1 で動作確認した 6de0509 (gpu-runtime と同じ)。
# `cuda-host` は `#[kernel]` macro 展開先で `cuda_host::CudaKernel` trait を
# 参照するため必須 (本 crate からは host launch しないが macro が要求)。
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
