[package]
name = "exp-002-fused-kernels"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
rust-version = { workspace = true }
publish = false

[lints]
workspace = true

[dependencies]
# Stage 2 fused kernel suite の reference CPU は `gpu-kernels` crate に置く
# (`pointwise/`, `sparse/` 各 module、Stage 1 の `progress/` と同列の慣行)。
# 本 experiment crate は `#[kernel]` の inline 定義 + GPU↔CPU smoke test の host
# 側 driver を載せる (Stage 1 の experiments/001 と同じ役割)。
gpu-kernels = { workspace = true }

# host loop は Stage 2-1 以降で `cuda_launch!` 経由で kernel を起動するため
# gpu-runtime + cuda-{core,host,device} を依存に持つ (Stage 1 の experiments/001 と同 set)。
gpu-runtime = { workspace = true }

# cuda-oxide の device 側 API (#[kernel] macro, DisjointSlice, atomics, thread::index_*)
# と host 側 launch (cuda_launch!)。rev は Stage 1 で動作確認した 6de0509。
# `cuda-host` は `#[kernel]` macro 展開先で `cuda_host::CudaKernel` trait を参照するため必須。
# `cuda-core` は cuda_launch! macro 展開で `cuda_core::launch_kernel(...)` 等を参照するため必須。
cuda-core = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-device = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }
cuda-host = { git = "https://github.com/NVlabs/cuda-oxide.git", rev = "6de0509" }

[[bin]]
name = "exp-002-fused-kernels"
path = "src/main.rs"
